<resources>
    <string name="app_name">Admin</string>
    <string name="welcome">The Sun</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="longin">Long In</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign up</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="required">Required*</string>
    <string name="create">Create</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="rooms">Rooms</string>
    <string name="prices">Prices</string>
    <string name="profile">Profile</string>
    <string-array name="countries">
        <item>Peru</item>
        <item>Chile</item>
        <item>Argentina</item>
        <item>Mexico</item>
        <item>Uruguay</item>
        <item>Bolivia</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="estado">State</string>
    <string name="ofertas">Offers</string>
    <string name="acciones">Acctions</string>
    <string name="vuelos">Flights</string>
    <string name="reservas">Stocks</string>
</resources>